responsive header + section home

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="reset.css" >
     <link rel="stylesheet" href="style.css" >
     <script src="https://kit.fontawesome.com/6ccabae60a.js" crossorigin="anonymous"></script>
+    <script src="main.js" defer></script>
     <title>플렉스(Flex) 반응형 웹 사이트</title>
 </head>
 <body>
@@ -26,15 +27,22 @@
         <div class="search">
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
+        <a href="#" class="toggleBtn">
+            <i class="fas fa-bars"></i>
+        </a>
     </header>
     <section id="home">
         <div class="img_wrap">
-            <div class="img_bg"></div>
+            <div class="img_bg">
+                <img src="./images/bg1.jpg" alt="">
+            </div>
             <div class="txt_wrap">
                 <p class="txt_title">
-                    
+                    <span>DON'T GIVE UP</span> <br>
+                    <span>LIFT ONE MORE UP</span>
                 </p>
-                
+                <p class="txt01">If you don't make time for exercise, you may have to make time for illness.</p>
+                <p class="txt02"></p>
             </div>
         </div>
     </section>
