--- a/index.html
+++ b/index.html
@@ -46,6 +46,43 @@
             </div>
         </div>
     </section>
+    <section id="about" class="section">
+        <div class="section_container">
+            <div class="section_title">
+                <h2>ABOUT</h2>
+                <p>NEW EQUIPMENT</p>
+            </div>
+            <ul class="equipment_list">
+                <li>
+                    <img src="./images/about_img01.jpg" alt="1">
+                    <p class="img_title">LEG PRESS</p>
+                    <p class="img_text">허벅지 근육을 집중적으로 자극을 줄 수 있다.</p>
+                    <a href="#">MORE READ</a>
+                </li>
+                <li>
+                    <img src="./images/about_img02.jpg" alt="2">
+                    <p class="img_title">LAT PULLDOWN</p>
+                    <p class="img_text">랫풀다운은 광배근을 발달시키는 근력운동이다.</p>
+                    <a href="#">MORE READ</a>
+                </li>
+                <li>
+                    <img src="./images/about_img03.jpg" alt="3">
+                    <p class="img_title">DUMBBELL EXERCISE</p>
+                    <p class="img_text">다양한 운동을 더욱 세부적으로 자극을 주어 실시할수 있다.</p>
+                    <a href="#">MORE READ</a>
+                </li>
+                <li>
+                    <img src="./images/about_img04.jpg" alt="4">
+                    <p class="img_title">FRONT SQUAT</p>
+                    <p class="img_text">허벅지의 대퇴사두근과 코어 - 복근에 집중적으로 효과를 얻을 수 있다.</p>
+                    <a href="#">MORE READ</a>
+                </li>
+            </ul>
+
+        </div>
+    </section>
+
+    
 
 </body>
 </html>
