background + Section cardio

--- a/index.html
+++ b/index.html
@@ -81,7 +81,38 @@
 
         </div>
     </section>
-
+    <section id="background">
+        <div class="section_container">
+            <div class="bg_wrap">
+                <p class="bg_title">
+                    STEADFASTNESS<br>
+                    LARGE MUSCLES
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="cardio" class="section">
+        <div class="section_container">
+            <div class="section_title">
+                <h2>CARDIO</h2>
+                <p>FAT BURN</p>
+            </div>
+            <ul class="cardio_list">
+                <li>
+                    <img src="./images/cardio_img01.jpg" alt="">
+                    <p class="img_title">RUNNING</p>
+                </li>
+                <li>
+                    <img src="./images/cardio_img02.jpg" alt="">
+                    <p class="img_title">SWIMMING</p>
+                </li>
+                <li>
+                    <img src="./images/cardio_img03.jpg" alt="">
+                    <p class="img_title">CYCLE</p>
+                </li>
+            </ul>
+        </div>
+    </section>
     
 
 </body>
