section backmuscles + section weight

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         </div>
     </section>
-    <section id="background">
+    <section id="muscles">
         <div class="section_container">
             <div class="bg_wrap">
                 <p class="bg_title">
@@ -109,6 +109,38 @@
                 <li>
                     <img src="./images/cardio_img03.jpg" alt="">
                     <p class="img_title">CYCLE</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section id="backmuscles">
+        <div class="section_container">
+            <div class="back_wrap">
+                <p class="bg_title">
+                    STEADFASTNESS<br>
+                    LARGE MUSCLES
+                </p>
+            </div>
+        </div>
+    </section>
+    <section class="weight section">
+        <div class="section_container">
+            <div class="section_title">
+                <h2>WEIGHT</h2>
+                <p>MAXIMIZE STRENGTH</p>
+            </div>
+            <ul class="weight_list">
+                <li>
+                    <img src="./images/weight01.jpg" alt="">
+                    <p class="img_title">SQUAT</p>
+                </li>
+                <li>
+                    <img src="./images/weight02.jpg" alt="">
+                    <p class="img_title">DEADLIFT</p>
+                </li>
+                <li>
+                    <img src="./images/weight03.jpg" alt="">
+                    <p class="img_title">BENCH PRESS</p>
                 </li>
             </ul>
         </div>
