Section shop + footer

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
         </div>
     </section>
-    <section class="weight section">
+    <section id="weight" class="weight section">
         <div class="section_container">
             <div class="section_title">
                 <h2>WEIGHT</h2>
@@ -145,7 +145,48 @@
             </ul>
         </div>
     </section>
-    
-
+    <section id="backmuscles02">
+        <div class="section_container">
+            <div class="bg_wrap">
+                <p class="bg_title">
+                    GROWTH<br>
+                    WEIGHT
+                </p>
+            </div>
+        </div>
+    </section>
+    <section id="shop" class="section">
+        <div class="section_container">
+            <div class="section_title">
+                <h2>SHOP</h2>
+                <p>ALL PRODUCTS</p>
+            </div>
+            <div class="shop_image">
+                <img src="./images/shop.jpg" alt="product image">
+                <a href="#">GO SHOPPING</a>
+            </div>
+        </div>
+    </section>
+    <footer id="footer">
+        <div class="footer_container">
+            <div class="footer_logo">
+                <i class="fa-solid fa-dumbbell"></i>
+                <a href="#">HolyMoly</a>
+            </div>
+            <div class="footer_policy">
+                <h3 class="footer_title">POLICY</h3>
+                <a href="#">이용약관</a>
+                <a href="#">개인정보처리방침</a>
+                <a href="#">사업자정보확인</a>
+            </div>
+            <div class="footer_contact">
+                <h3 class="footer_title">CONTACT</h3>
+                <a href="#">예약하기</a>
+                <a href="#">상담하기</a>
+                <a href="#">페이스북</a>
+                <a href="#">인스타그램</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
